--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Webfolio | Shadan Siddiqui</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.svg">
 </head>
 
 <body>
@@ -25,7 +26,8 @@
         <h4>Hi, I am <span>Shadan</span></h4>
         <p class="title">J1 student at Victoria Junior College</p>
         <p class="subtitle">Scroll down to learn more</p>
-        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgb(255, 255, 255); padding-top: 10px;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24"
+            style="fill: rgb(255, 255, 255); padding-top: 10px;">
             <path
                 d="M12 1.993C6.486 1.994 2 6.48 2 11.994c0 5.513 4.486 9.999 10 10 5.514 0 10-4.486 10-10s-4.485-10-10-10.001zm0 18.001c-4.411-.001-8-3.59-8-8 0-4.411 3.589-8 8-8.001 4.411.001 8 3.59 8 8.001s-3.589 8-8 8z">
             </path>
