--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Webfolio | Shadan Siddiqui</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.svg">
 </head>
@@ -20,6 +21,7 @@
             <li><a href="#">Contact</a></li>
             <li><a href="#">About</a></li>
         </ul>
+        <button class="surprise-btn">Surprise Me</button>
     </div>
 
     <div class="main">
@@ -33,6 +35,77 @@
             </path>
             <path d="M13 8h-2v4H7.991l4.005 4.005L16 12h-3z"></path>
         </svg>
+    </div>
+
+    <h5 class="seprator">Who I Am</h5>
+
+    <div class="about">
+        <div class="info">
+            <h3>About Me</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque eveniet vitae fugit accusamus, cupiditate
+                labore quae officia sunt enim consectetur eligendi sit mollitia iste doloribus libero odio, quidem optio
+                autem!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque eveniet vitae fugit accusamus,
+                cupiditate labore quae officia sunt enim consectetur eligendi sit mollitia iste doloribus libero odio,
+                quidem optio autem!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque eveniet vitae fugit accusamus,
+                cupiditate labore quae officia sunt enim consectetur eligendi sit mollitia iste doloribus libero odio,
+                quidem optio autem!
+            </p>
+        </div>
+    </div>
+
+    <h5 class="seprator">My Skills</h5>
+
+    <div class="skills">
+        <div class="left">
+            <div class="info">
+                <h3>What My Programming Skills Included?</h3>
+                <p>
+                    I develop simple, intuitive and responsive user interface that helps users get things done with less
+                    effort and time with those technologies.
+                </p>
+            </div>
+        </div>
+
+        <div class="right">
+            <div class="item">
+                <i class='bx bxl-html5'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-css3'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-typescript'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-git'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-bootstrap'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-php'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-sass'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-tailwind-css'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-mongodb'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-graphql'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-jquery'></i>
+            </div>
+            <div class="item">
+                <i class='bx bxl-angular'></i>
+            </div>
+        </div>
     </div>
 
 </body>
