--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li id="link1" class="link"><a href="#about">About</a></li>
             <li id="link2" class="link"><a href="#skills">Skills</a></li>
             <li id="link3" class="link"><a href="#achievements">Achievements</a></li>
-            <li id="link4" class="link"><a href="#">Projects</a></li>
+            <li id="link4" class="link"><a href="#projects">Projects</a></li>
             <li id="link5" class="link"><a href="#">Contact</a></li>
         </ul>
         <a href="#">
