Updates to content

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
     <title>Shadan's Webfolio</title>
 </head>
 
@@ -15,7 +15,7 @@
 
     <nav>
         <div class="nav-logo">
-            <img src="assets/logo.png">
+            <img src="images/logo.png">
         </div>
 
         <ul class="nav-links">
@@ -46,33 +46,30 @@
     <section class="container" id="about">
         <h2 class="header">About Me</h2>
         <p class="sub-header">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse architecto nobis blanditiis beatae. Qui
-            praesentium harum magnam tempore rerum. Sapiente deserunt eaque libero, adipisci modi cumque fuga aperiam
-            repellat commodi?
+            My name is Shadan, and I am a J1 at Victoria Junior College (VJC) in class 24S56. My CCA is iGlobe, where I
+            hold the EXCO position of Logistic Director. I was born on 13 July 2007 in India and lived in the UAE for
+            about two years before moving to Singapore. <br><br> Listed below are the schools that I've attended.
         </p>
         <div class="about">
             <div class="card">
                 <div class="content">
                     <h4>2018 - 2019</h4>
                     <h3>Elias Park Primary School</h3>
-                    <img src="assets/EPPS.png">
-
+                    <img src="images/EPPS.png">
                 </div>
             </div>
             <div class="card">
                 <div class="content">
                     <h4>2020 - 2023</h4>
                     <h3>Victoria School<br><br></h3>
-                    <img src="assets/VS.png">
-
+                    <img src="images/VS.png">
                 </div>
             </div>
             <div class="card">
                 <div class="content">
                     <h4>2024 - Present</h4>
                     <h3>Victoria Junior College</h3>
-                    <img src="assets/VJC.png">
-
+                    <img src="images/VJC.png">
                 </div>
             </div>
         </div>
@@ -81,7 +78,7 @@
     <section class="container" id="skills">
         <h2 class="header">My Skills</h2>
         <p class="sub-header">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit animi eos quaerat corporis aliquam aliquid possimus. Eveniet voluptatum quasi cupiditate asperiores nobis quam, laboriosam dicta dignissimos reiciendis laudantium ut ratione?
+            I am proficient in the following programming languages:
         </p>
         <div class="skills">
             <div class="card">
@@ -118,7 +115,7 @@
     <section class="container" id="achievements">
         <h2 class="header">My Achievements</h2>
         <p class="sub-header">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur enim sed accusamus dolorum nisi, dolore natus facere officiis incidunt inventore maiores minima ab cumque non quis iusto sunt doloremque atque!
+            This section highlights some of my most noteworthy accomplishments, including awards and certifications. Here, you'll get a glimpse of my dedication, impact, and value!
         </p>
         <div class="achievements">
             <table>
@@ -129,27 +126,39 @@
                     </tr>
                     <tr>
                         <td>2019</td>
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam laboriosam porro ratione, sunt repudiandae possimus ducimus ipsum mollitia debitis inventore corrupti accusantium quaerat distinctio ut temporibus! Cum sit praesentium quia!</td>
+                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam laboriosam porro ratione,
+                            sunt repudiandae possimus ducimus ipsum mollitia debitis inventore corrupti accusantium
+                            quaerat distinctio ut temporibus! Cum sit praesentium quia!</td>
                     </tr>
                     <tr>
                         <td>2020</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatem rerum modi tempora officia repellendus consequuntur beatae sequi, corrupti molestiae quam voluptas, consectetur alias provident omnis! Mollitia odit numquam dolorum.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatem rerum modi
+                            tempora officia repellendus consequuntur beatae sequi, corrupti molestiae quam voluptas,
+                            consectetur alias provident omnis! Mollitia odit numquam dolorum.</td>
                     </tr>
                     <tr>
                         <td>2021</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id autem quibusdam saepe accusamus recusandae, laboriosam deleniti ducimus? Voluptatem error et ipsum officia eligendi facilis provident delectus at atque vel.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id autem quibusdam saepe
+                            accusamus recusandae, laboriosam deleniti ducimus? Voluptatem error et ipsum officia
+                            eligendi facilis provident delectus at atque vel.</td>
                     </tr>
                     <tr>
                         <td>2022</td>
-                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum, totam similique. Consectetur repellat debitis eveniet minus? Consequatur saepe quidem obcaecati nihil voluptate suscipit omnis. Illum mollitia harum ex ipsum dolore?</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum, totam similique.
+                            Consectetur repellat debitis eveniet minus? Consequatur saepe quidem obcaecati nihil
+                            voluptate suscipit omnis. Illum mollitia harum ex ipsum dolore?</td>
                     </tr>
                     <tr>
                         <td>2023</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, illo voluptatibus similique ex obcaecati, cum modi molestiae aliquam, iure ut maxime totam. Odit odio fuga quo. Fugit dolorem suscipit error.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, illo voluptatibus similique ex
+                            obcaecati, cum modi molestiae aliquam, iure ut maxime totam. Odit odio fuga quo. Fugit
+                            dolorem suscipit error.</td>
                     </tr>
                     <tr>
                         <td>2024</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, quos quaerat accusantium magnam modi nihil ex atque eligendi. Iusto reprehenderit, maiores laboriosam eius animi explicabo ullam eveniet sapiente laudantium a.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, quos quaerat accusantium
+                            magnam modi nihil ex atque eligendi. Iusto reprehenderit, maiores laboriosam eius animi
+                            explicabo ullam eveniet sapiente laudantium a.</td>
                     </tr>
                 </tbody>
             </table>
@@ -159,7 +168,8 @@
     <section class="container" id="projects">
         <h2 class="header">My Projects</h2>
         <p class="sub-header">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eos unde nostrum ea eligendi asperiores, tempora adipisci repudiandae repellendus cumque suscipit natus voluptates quaerat mollitia distinctio maxime ipsa ex magni.
+            Here is a selection of projects I've completed, showcasing my skills and creative problem-solving abilities. Explore a
+            variety of projects to get a sense of my experience and the types of challenges I can tackle.
         </p>
         <div class="projects">
             <table>
@@ -170,19 +180,26 @@
                     </tr>
                     <tr>
                         <td><a href="https://github.com/Shadan13/PlantClickerGame"><u>Plant Clicker Game</u></a></td>
-                        <td>Simple game made with Python using Tkinter library for GUI. Inspired by <a href="https://orteil.dashnet.org/cookieclicker/">Cookie Clicker</a>.</td>
+                        <td>Simple game made with Python using Tkinter library for GUI. Inspired by <a
+                                href="https://orteil.dashnet.org/cookieclicker/">Cookie Clicker</a>.</td>
                     </tr>
                     <tr>
                         <td><a href="https://github.com/Shadan13/PasswordGen"><u>Password Generator</u></a></td>
-                        <td>Generates an 8-character (alphanumeric) password using the Random library in Python. Was used for a project involving developing a digital smart door lock connected to IoT.</td>
+                        <td>Generates an 8-character (alphanumeric) password using the Random library in Python. Was
+                            used for a project involving developing a digital smart door lock connected to IoT.</td>
                     </tr>
                     <tr>
-                        <td><a href="https://github.com/Shadan13/CircleInscribedTriangle"><u>Circle Inscribed Triangle</u></a></td>
-                        <td>This Python project calculates the length of side, perimeter, and area of a triangle inscribed inside a circle of given radius. Also gives circumference and area of the circle.</td>
+                        <td><a href="https://github.com/Shadan13/CircleInscribedTriangle"><u>Circle Inscribed
+                                    Triangle</u></a></td>
+                        <td>This Python project calculates the length of side, perimeter, and area of a triangle
+                            inscribed inside a circle of given radius. Also gives circumference and area of the circle.
+                        </td>
                     </tr>
                     <tr>
                         <td><a href="https://github.com/Shadan13/Pokedex"><u>Pokedex</u></a></td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, et. Provident, accusantium sequi? Atque voluptate nesciunt eum cum, explicabo nam autem labore molestiae est illo nihil magni earum repellendus eveniet.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, et. Provident, accusantium
+                            sequi? Atque voluptate nesciunt eum cum, explicabo nam autem labore molestiae est illo nihil
+                            magni earum repellendus eveniet.</td>
                     </tr>
                 </tbody>
             </table>
@@ -205,9 +222,6 @@
     <div class="copyright">
         Copyright © Shadan Siddiqui. All Rights Reserved.
     </div>
-
-    <script src="script.js"></script>
-
 </body>
 
 </html>
