Add scroll to top button

--- a/index.html
+++ b/index.html
@@ -217,11 +217,9 @@
         <div class="cols">
             <div class="about-col">
                 <h3>Shadan Siddiqui</h3>
-                <p>Victoria Junior College</p>
             </div>
-
-            <div class="links-col">
-                <a href="#">Back to Top <i class='bx bxs-upvote'></i></a>
+            <div class="school-col">
+                <p>Victoria Junior College</p>
             </div>
         </div>
     </footer>
@@ -229,6 +227,11 @@
     <div class="copyright">
         Copyright © Shadan Siddiqui. All Rights Reserved.
     </div>
+
+    <button class="scroll-top" onclick="scrollToTop()">
+        <i class='bx bxs-up-arrow'></i>
+    </button>
+
 </body>
 
 </html>
