Update files via upload

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-dark.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
     <script defer src="js/script.js"></script>
@@ -15,7 +15,7 @@
 
     <nav>
         <div class="nav-logo">
-            <img src="images/logo.png" alt="SS logo">
+            <img src="images/logo-dark.png" alt="SS logo">
         </div>
 
         <ul class="nav-links">
@@ -23,7 +23,7 @@
             <li id="link2" class="link"><a href="#skills">Skills</a></li>
             <li id="link3" class="link"><a href="#achievements">Achievements</a></li>
             <li id="link4" class="link"><a href="#projects">Projects</a></li>
-            <li id="link5" class="link"><a href="#">Contact</a></li>
+            <li id="link5" class="link"><a href="#contact">Contact</a></li>
         </ul>
         <a href="https://github.com/Shadan13" target="_blank" rel="noopener noreferrer">
             <button class="btn">Surprise Me</button>
@@ -115,7 +115,8 @@
     <section class="container" id="achievements">
         <h2 class="header">My Achievements</h2>
         <p class="sub-header">
-            This section highlights some of my most noteworthy accomplishments, including awards and certifications.
+            This section highlights some of my most noteworthy accomplishments, including awards, certifications, and
+            leadership positions.
             Here, you'll get a glimpse of my dedication, impact, and value!
         </p>
         <div class="achievements">
@@ -126,40 +127,76 @@
                         <th>Achievements</th>
                     </tr>
                     <tr>
+                        <td>2018</td>
+                        <td>National Mathematical Olympiad of Singapore (NMOS) - Bronze</td>
+                    </tr>
+                    <tr>
+                        <td>2018</td>
+                        <td>Class Monitor</td>
+                    </tr>
+                    <tr>
                         <td>2019</td>
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam laboriosam porro ratione,
-                            sunt repudiandae possimus ducimus ipsum mollitia debitis inventore corrupti accusantium
-                            quaerat distinctio ut temporibus! Cum sit praesentium quia!</td>
+                        <td>Elias Park Honours Day Scholar</td>
+                    </tr>
+                    <tr>
+                        <td>2019</td>
+                        <td>Singapore Mathematical Olympiad for Primary School (SMOPS) - Participation</td>
                     </tr>
                     <tr>
                         <td>2020</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatem rerum modi
-                            tempora officia repellendus consequuntur beatae sequi, corrupti molestiae quam voluptas,
-                            consectetur alias provident omnis! Mollitia odit numquam dolorum.</td>
+                        <td>Singapore Mathematical Olympiad (SMO) (Junior) - Honourable Mention</td>
+                    </tr>
+                    <tr>
+                        <td>2020</td>
+                        <td>Class Information Technology (IT) Representative</td>
                     </tr>
                     <tr>
                         <td>2021</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod id autem quibusdam saepe
-                            accusamus recusandae, laboriosam deleniti ducimus? Voluptatem error et ipsum officia
-                            eligendi facilis provident delectus at atque vel.</td>
+                        <td>Singapore Mathematical Olympiad (SMO) (Junior) - Honourable Mention</td>
+                    </tr>
+                    <tr>
+                        <td>2021</td>
+                        <td>Singapore Youth Festival (SYF) (English Drama) - Certificate of Distinction</td>
+                    </tr>
+                    <tr>
+                        <td>2021</td>
+                        <td>Class Information Technology (IT) Representative</td>
                     </tr>
                     <tr>
                         <td>2022</td>
-                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum, totam similique.
-                            Consectetur repellat debitis eveniet minus? Consequatur saepe quidem obcaecati nihil
-                            voluptate suscipit omnis. Illum mollitia harum ex ipsum dolore?</td>
+                        <td>Singapore Mathematical Olympiad (SMO) (Senior) - Participation</td>
                     </tr>
                     <tr>
                         <td>2023</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, illo voluptatibus similique ex
-                            obcaecati, cum modi molestiae aliquam, iure ut maxime totam. Odit odio fuga quo. Fugit
-                            dolorem suscipit error.</td>
+                        <td>NUS Statistics Competition - Winner of First Prize</td>
+                    </tr>
+                    <tr>
+                        <td>2023</td>
+                        <td>Singapore Junior Physics Olympiad (SJPO) - Bronze</td>
+                    </tr>
+                    <tr>
+                        <td>2023</td>
+                        <td>Singapore Youth Festival (SYF) (English Drama) - Certificate of Distinction</td>
+                    </tr>
+                    <tr>
+                        <td>2023</td>
+                        <td>Victoria School English Drama SYF Stage Manager</td>
+                    </tr>
+                    <tr>
+                        <td>2023</td>
+                        <td>Victoria School English Drama EXCO (Head of Productions)</td>
+                    </tr>
+                    <tr>
+                        <td>2023</td>
+                        <td>Singapore Physics League (SPhL) (Junior) - Participation</td>
+                    </tr>
+                    <tr>
+                        <td>2023</td>
+                        <td>Singapore Mathematical Olympiad (SMO) (Senior) - Participation</td>
                     </tr>
                     <tr>
                         <td>2024</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, quos quaerat accusantium
-                            magnam modi nihil ex atque eligendi. Iusto reprehenderit, maiores laboriosam eius animi
-                            explicabo ullam eveniet sapiente laudantium a.</td>
+                        <td>Victoria Junior College iGlobe EXCO (Logistic Director)</td>
                     </tr>
                 </tbody>
             </table>
@@ -204,9 +241,7 @@
                     <tr>
                         <td><a href="https://github.com/Shadan13/Pokedex" target="_blank"
                                 rel="noopener noreferrer"><u>Pokedex</u></a></td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, et. Provident, accusantium
-                            sequi? Atque voluptate nesciunt eum cum, explicabo nam autem labore molestiae est illo nihil
-                            magni earum repellendus eveniet.</td>
+                        <td>A Pokédex super search engine that can search for Pokémon based on their stats or types.</td>
                     </tr>
                 </tbody>
             </table>
@@ -218,8 +253,19 @@
             <div class="about-col">
                 <h3>Shadan Siddiqui</h3>
             </div>
-            <div class="school-col">
-                <p>Victoria Junior College</p>
+            <div class="socials" id="contact">
+                <a href="https://wa.me/+6588420842" target="_blank" rel="noopener noreferrer">
+                    <i class='bx bxl-whatsapp'></i>
+                </a>
+                <a href="https://www.instagram.com/floutdoubt/" target="_blank" rel="noopener noreferrer">
+                    <i class='bx bxl-instagram'></i>
+                </a>
+                <a href="https://github.com/Shadan13" target="_blank" rel="noopener noreferrer">
+                    <i class='bx bxl-github'></i>
+                </a>
+                <a href=mailto:“shadan.siddiqui@gmail.com?subject=Contact%20from%20your%20Webfolio”>
+                    <i class='bx bxl-gmail'></i>
+                </a>
             </div>
         </div>
     </footer>
@@ -230,6 +276,10 @@
 
     <button class="scroll-top" onclick="scrollToTop()">
         <i class='bx bxs-up-arrow'></i>
+    </button>
+
+    <button class="dark-light" onclick="switchMode()">
+        <i class="bx bxs-sun"></i>
     </button>
 
 </body>
