Update files via upload

--- a/index.html
+++ b/index.html
@@ -51,27 +51,33 @@
             about two years before moving to Singapore. <br><br> Listed below are the schools that I've attended.
         </p>
         <div class="about">
-            <div class="card">
-                <div class="content">
-                    <h4>2018 - 2019</h4>
-                    <h3>Elias Park Primary School</h3>
-                    <img src="images/EPPS.png" alt="EPPS logo">
+            <a href="https://www.eliasparkpri.moe.edu.sg/" target="_blank" rel="noopener noreferrer">
+                <div class="card">
+                    <div class="content">
+                        <h4>2018 - 2019</h4>
+                        <h3>Elias Park Primary School</h3>
+                        <img src="images/EPPS.png" alt="EPPS logo">
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="content">
-                    <h4>2020 - 2023</h4>
-                    <h3>Victoria School<br><br></h3>
-                    <img src="images/VS.png" alt="VS logo">
+            </a>
+            <a href="https://www.victoria.moe.edu.sg/" target="_blank" rel="noopener noreferrer">
+                <div class="card">
+                    <div class="content">
+                        <h4>2020 - 2023</h4>
+                        <h3>Victoria School<br><br></h3>
+                        <img src="images/VS.png" alt="VS logo">
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="content">
-                    <h4>2024 - Present</h4>
-                    <h3>Victoria Junior College</h3>
-                    <img src="images/VJC.png" alt="VJC logo">
+            </a>
+            <a href="https://www.victoriajc.moe.edu.sg/" target="_blank" rel="noopener noreferrer">
+                <div class="card">
+                    <div class="content">
+                        <h4>2024 - Present</h4>
+                        <h3>Victoria Junior College</h3>
+                        <img src="images/VJC.png" alt="VJC logo">
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
     </section>
 
@@ -81,41 +87,51 @@
             I am proficient in the following programming languages:
         </p>
         <div class="skills">
-            <div class="card">
-                <span><i class='bx bxl-c-plus-plus'></i></span>
-                <h4>C++</h4>
-                <p>
-                    Powerful, versatile programming language balancing speed with object-oriented features.
-                </p>
-            </div>
-            <div class="card">
-                <span><i class='bx bxl-python'></i></span>
-                <h4>Python</h4>
-                <p>
-                    Easy-to-learn, popular, beginner-friendly language known for its clear code and wide range of uses.
-                </p>
-            </div>
-            <div class="card">
-                <span><i class='bx bxl-html5'></i></span>
-                <h4>HTML</h4>
-                <p>
-                    The building blocks of web pages, defines structure and content for browsers to display.
-                </p>
-            </div>
-            <div class="card">
-                <span><i class='bx bxl-css3'></i></span>
-                <h4>CSS</h4>
-                <p>
-                    Adds visual flair to webpages, controlling fonts, colors, layout, and more for a polished look.
-                </p>
-            </div>
+            <a href="https://en.wikipedia.org/wiki/C%2B%2B" target="_blank" rel="noopener noreferrer">
+                <div class="card">
+                    <span><i class='bx bxl-c-plus-plus'></i></span>
+                    <h4>C++</h4>
+                    <p>
+                        Powerful, versatile programming language balancing speed with object-oriented features.
+                    </p>
+                </div>
+            </a>
+            <a href="https://en.wikipedia.org/wiki/Python_(programming_language)" target="_blank"
+                rel="noopener noreferrer">
+                <div class="card">
+                    <span><i class='bx bxl-python'></i></span>
+                    <h4>Python</h4>
+                    <p>
+                        Easy-to-learn, popular, beginner-friendly language known for its clear code and wide range of
+                        uses.
+                    </p>
+                </div>
+            </a>
+            <a href="https://en.wikipedia.org/wiki/HTML" target="_blank" rel="noopener noreferrer">
+                <div class="card">
+                    <span><i class='bx bxl-html5'></i></span>
+                    <h4>HTML</h4>
+                    <p>
+                        The building blocks of web pages, defines structure and content for browsers to display.
+                    </p>
+                </div>
+            </a>
+            <a href="https://en.wikipedia.org/wiki/CSS" target="_blank" rel="noopener noreferrer">
+                <div class="card">
+                    <span><i class='bx bxl-css3'></i></span>
+                    <h4>CSS</h4>
+                    <p>
+                        Adds visual flair to webpages, controlling fonts, colors, layout, and more for a polished look.
+                    </p>
+                </div>
+            </a>
         </div>
     </section>
 
     <section class="container" id="achievements">
         <h2 class="header">My Achievements</h2>
         <p class="sub-header">
-            This section highlights some of my most noteworthy accomplishments, including awards, certifications, and
+            This section highlights some of my accomplishments, including awards, certifications, and
             leadership positions.
             Here, you'll get a glimpse of my dedication, impact, and value!
         </p>
@@ -124,7 +140,7 @@
                 <tbody>
                     <tr>
                         <th>Year</th>
-                        <th>Achievements</th>
+                        <th>Achievement - Click to see certificate (if applicable)</th>
                     </tr>
                     <tr>
                         <td>2018</td>
@@ -136,7 +152,7 @@
                     </tr>
                     <tr>
                         <td>2019</td>
-                        <td>Elias Park Honours Day Scholar</td>
+                        <td>Elias Park Honours Day - Scholar</td>
                     </tr>
                     <tr>
                         <td>2019</td>
@@ -144,7 +160,8 @@
                     </tr>
                     <tr>
                         <td>2020</td>
-                        <td>Singapore Mathematical Olympiad (SMO) (Junior) - Honourable Mention</td>
+                        <td>Singapore Mathematical Olympiad (SMO) (Junior) - <a href="images/2020 SMO.png"
+                                target="_blank" rel="noopener noreferrer">Honourable Mention</a></td>
                     </tr>
                     <tr>
                         <td>2020</td>
@@ -152,11 +169,13 @@
                     </tr>
                     <tr>
                         <td>2021</td>
-                        <td>Singapore Mathematical Olympiad (SMO) (Junior) - Honourable Mention</td>
+                        <td>Singapore Mathematical Olympiad (SMO) (Junior) - <a href="images/2021 SMO.png"
+                                target="_blank" rel="noopener noreferrer">Honourable Mention</a></td>
                     </tr>
                     <tr>
                         <td>2021</td>
-                        <td>Singapore Youth Festival (SYF) (English Drama) - Certificate of Distinction</td>
+                        <td>Singapore Youth Festival (SYF) (English Drama) - <a href="images/2021 SYF.png"
+                                target="_blank" rel="noopener noreferrer">Certificate of Distinction</a></td>
                     </tr>
                     <tr>
                         <td>2021</td>
@@ -168,11 +187,13 @@
                     </tr>
                     <tr>
                         <td>2023</td>
-                        <td>NUS Statistics Competition - Winner of First Prize</td>
+                        <td>NUS Statistics Competition - <a href="images/2023 NUS Statistics Competition.png"
+                                target="_blank" rel="noopener noreferrer">Winner of First Prize</a></td>
                     </tr>
                     <tr>
                         <td>2023</td>
-                        <td>Singapore Junior Physics Olympiad (SJPO) - Bronze</td>
+                        <td>Singapore Junior Physics Olympiad (SJPO) - <a href="images/2023 SJPO Individual.png"
+                                target="_blank" rel="noopener noreferrer">Bronze</a></td>
                     </tr>
                     <tr>
                         <td>2023</td>
@@ -188,11 +209,13 @@
                     </tr>
                     <tr>
                         <td>2023</td>
-                        <td>Singapore Physics League (SPhL) (Junior) - Participation</td>
+                        <td>Singapore Physics League (SPhL) (Junior) - <a href="images/2023 SJPO Team.png"
+                                target="_blank" rel="noopener noreferrer">Participation</a></td>
                     </tr>
                     <tr>
                         <td>2023</td>
-                        <td>Singapore Mathematical Olympiad (SMO) (Senior) - Participation</td>
+                        <td>Singapore Mathematical Olympiad (SMO) (Senior) - <a href="images/2023 SMO.png"
+                                target="_blank" rel="noopener noreferrer">Participation</a></td>
                     </tr>
                     <tr>
                         <td>2024</td>
@@ -241,7 +264,8 @@
                     <tr>
                         <td><a href="https://github.com/Shadan13/Pokedex" target="_blank"
                                 rel="noopener noreferrer"><u>Pokedex</u></a></td>
-                        <td>A Pokédex super search engine that can search for Pokémon based on their stats or types.</td>
+                        <td>A Pokédex super search engine that can search for Pokémon based on their stats or types.
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -263,7 +287,7 @@
                 <a href="https://github.com/Shadan13" target="_blank" rel="noopener noreferrer">
                     <i class='bx bxl-github'></i>
                 </a>
-                <a href=mailto:“shadan.siddiqui@gmail.com?subject=Contact%20from%20your%20Webfolio”>
+                <a href=mailto:shadan.siddiqui@gmail.com?subject=Contact%20from%20your%20Webfolio>
                     <i class='bx bxl-gmail'></i>
                 </a>
             </div>
