--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li id="link4" class="link"><a href="#projects">Projects</a></li>
             <li id="link5" class="link"><a href="#contact">Contact</a></li>
         </ul>
-        <a href="https://github.com/Shadan13" target="_blank" rel="noopener noreferrer">
+        <a href="videos/surprise.mp4" target="_blank" rel="noopener noreferrer">
             <button class="btn">Surprise Me</button>
         </a>
 
